--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@ethersproject/contracts": "^5.5.0",
+    "@matejmazur/react-katex": "^3.1.3",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@mui/styles": "^5.10.14",
@@ -57,6 +58,8 @@
     "@terra-money/terra.js": "^3.1.7",
     "@terra-money/wallet-provider": "^3.11.1",
     "@types/d3-array": "^3.0.2",
+    "@types/react-router-hash-link": "^2.4.5",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "@walletconnect/ethereum-provider": "^1.7.1",
     "@web3-react/core": "^8.0.22-beta.0",
     "@web3-react/empty": "8.0.11-beta.0",
@@ -86,7 +89,9 @@
     "graphql": "^15.5.1",
     "graphql-request": "^3.4.0",
     "graphql-tag": "^2.12.5",
+    "katex": "^0.16.4",
     "lodash.debounce": "^4.0.8",
+    "lz-string": "^1.4.4",
     "multiplerun": "^2.0.1",
     "numeral": "^2.0.6",
     "puppeteer": "^13.5.1",
@@ -95,16 +100,26 @@
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-is": "^17.0.2",
-    "react-markdown": "^7.0.1",
+    "react-katex": "^3.0.1",
+    "react-markdown": "^7.1.2",
     "react-query": "^3.18.1",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.2.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-spinners-kit": "^1.9.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.3.2",
     "react-use-clipboard": "^1.0.7",
+    "rehype-katex": "^6.0.2",
+    "rehype-raw": "^6.1.1",
+    "remark-emoji": "^3.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
+    "remark-rehype": "^10.1.0",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "^7.2.0",
+    "shrink-string": "^3.1.2",
     "styled-components": "^5.3.6",
     "use-resize-observer": "^7.0.0",
     "usehooks-ts": "^2.4.2",
