--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "@types/d3-timer": "^2.0.1",
     "@types/jest": "^26.0.24",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lz-string": "^1.3.34",
     "@types/node": "^16.3.1",
     "@types/numeral": "^2.0.1",
     "@types/puppeteer": "^5.4.5",
