--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   "dependencies": {
     "@anchor-protocol/crossanchor-sdk": "0.1.2-alpha.125",
     "@certusone/wormhole-sdk": "^0.2.0",
+    "@cosmjs/cosmwasm-stargate": "^0.29.5",
+    "@cosmjs/stargate": "^0.29.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@ethersproject/contracts": "^5.5.0",
@@ -181,6 +183,8 @@
     "@types/testing-library__user-event": "^4.2.0",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.32.0",
     "ts-node": "^10.1.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "4.5.5",
