--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@terra-money/terra.js": "^3.1.7",
     "@terra-money/wallet-provider": "^3.11.1",
     "@types/d3-array": "^3.0.2",
+    "@types/lodash.throttle": "^4.1.7",
     "@types/react-router-hash-link": "^2.4.5",
     "@types/react-syntax-highlighter": "^15.5.5",
     "async-mutex": "^0.4.0",
@@ -90,6 +91,7 @@
     "graphql-tag": "^2.12.5",
     "katex": "^0.16.4",
     "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "lz-string": "^1.4.4",
     "multiplerun": "^2.0.1",
     "numeral": "^2.0.6",
