--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     "@anchor-protocol/crossanchor-sdk": "0.1.2-alpha.125",
     "@cosmjs/cosmwasm-stargate": "^0.29.5",
     "@cosmjs/stargate": "^0.29.5",
+    "@cosmos-kit/react-lite": "^1.4.10",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@matejmazur/react-katex": "^3.1.3",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
-    "@mui/styles": "^5.10.14",
     "@rewiko/crud-request": "^5.1.12",
     "@rocket-scripts/utils": "^3.2.0",
     "@rx-stream/pipe": "^0.7.1",
@@ -97,11 +97,11 @@
     "numeral": "^2.0.6",
     "p-map": "^4.0.0",
     "puppeteer": "^13.5.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-ga": "^3.3.0",
-    "react-is": "^17.0.2",
+    "react-is": "^18.0.2",
     "react-katex": "^3.0.1",
     "react-markdown": "^7.1.2",
     "react-query": "^3.18.1",
@@ -155,7 +155,7 @@
     "@storybook/react": "^6.3.4",
     "@storybook/theming": "^6.3.4",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^7.0.1",
     "@testing-library/user-event": "^13.1.9",
     "@types/big.js": "^6.1.1",
@@ -174,7 +174,7 @@
     "@types/puppeteer": "^5.4.5",
     "@types/ramda": "^0.27.44",
     "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
+    "@types/react-dom": "^18.2.4",
     "@types/react-is": "^17.0.1",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
