--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,24 @@
 {
   "extends": [
     "eslint:recommended",
-    "plugin:import/errors",
     "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended"
+    "plugin:jsx-a11y/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
-  "plugins": ["react", "import", "jsx-a11y"],
+  "plugins": ["react", "jsx-a11y", "@typescript-eslint", "react-hooks"],
   "rules":{
     "react-hooks/exhaustive-deps":"error",
+    "@typescript-eslint/no-unused-vars": "warn",
+    "react-hooks/rules-of-hooks": "error",
+    "react/no-unescaped-entities": "off"
+  },
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   }
 }
