--- a/package.json
+++ b/package.json
@@ -44,14 +44,12 @@
     ]
   },
   "dependencies": {
-    "@anchor-protocol/crossanchor-sdk": "0.1.2-alpha.125",
     "@cosmjs/cosmwasm-stargate": "^0.29.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@matejmazur/react-katex": "^3.1.3",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
-    "@mui/styles": "^5.10.14",
     "@rewiko/crud-request": "^5.1.12",
     "@rocket-scripts/utils": "^3.2.0",
     "@rx-stream/pipe": "^0.7.1",
@@ -182,6 +180,7 @@
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-react": "^7.32.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
