--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@matejmazur/react-katex": "^3.1.3",
+    "@mdx-js/react": "^3.0.0",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@rewiko/crud-request": "^5.1.12",
@@ -94,10 +95,11 @@
     "numeral": "^2.0.6",
     "p-map": "^4.0.0",
     "puppeteer": "^13.5.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-ga": "^3.3.0",
+    "react-inspector": "^6.0.2",
     "react-is": "^17.0.2",
     "react-katex": "^3.0.1",
     "react-markdown": "^7.1.2",
@@ -105,7 +107,7 @@
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-spinners-kit": "^1.9.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.3.2",
@@ -142,17 +144,17 @@
     "@originjs/vite-plugin-commonjs": "^1.0.2",
     "@peculiar/webcrypto": "^1.2.3",
     "@ssen/jest-transform": "^3.0.0",
-    "@storybook/addon-actions": "^6.3.4",
-    "@storybook/addon-essentials": "^6.3.4",
-    "@storybook/addon-links": "^6.3.4",
-    "@storybook/addon-storysource": "^6.3.4",
-    "@storybook/addons": "^6.3.4",
-    "@storybook/node-logger": "^6.3.4",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.4",
-    "@storybook/theming": "^6.3.4",
+    "@storybook/addon-actions": "^7.5.3",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-links": "^7.5.3",
+    "@storybook/addon-storysource": "^7.5.3",
+    "@storybook/addons": "^7.5.3",
+    "@storybook/node-logger": "^7.5.3",
+    "@storybook/preset-create-react-app": "^7.5.3",
+    "@storybook/react": "^7.5.3",
+    "@storybook/theming": "^7.5.3",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/react-hooks": "^7.0.1",
     "@testing-library/user-event": "^13.1.9",
     "@types/big.js": "^6.1.1",
@@ -170,8 +172,8 @@
     "@types/numeral": "^2.0.1",
     "@types/puppeteer": "^5.4.5",
     "@types/ramda": "^0.27.44",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
     "@types/react-is": "^17.0.1",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
