--- a/package.json
+++ b/package.json
@@ -53,8 +53,6 @@
     "@mui/material": "^5.10.14",
     "@rewiko/crud-request": "^5.1.12",
     "@rocket-scripts/utils": "^3.2.0",
-    "@rx-stream/pipe": "^0.7.1",
-    "@rx-stream/react": "^0.7.1",
     "@sentry/react": "^6.8.0",
     "@sentry/tracing": "^6.8.0",
     "@terra-money/feather.js": "^1.2.1",
@@ -84,7 +82,6 @@
     "fast-deep-equal": "^3.1.3",
     "fastdom": "^1.0.10",
     "firebase": "^8.7.1",
-    "fix-hmr": "^1.0.2",
     "glob": "^10.3.10",
     "graphql": "^15.5.1",
     "graphql-request": "^3.4.0",
@@ -104,13 +101,13 @@
     "react-inspector": "^6.0.2",
     "react-is": "^17.0.2",
     "react-katex": "^3.0.1",
+    "react-loader-spinner": "^5.4.5",
     "react-markdown": "^7.1.2",
     "react-query": "^3.18.1",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
-    "react-spinners-kit": "^1.9.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.3.2",
     "react-use-clipboard": "^1.0.7",
