--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "fast-deep-equal": "^3.1.3",
     "fastdom": "^1.0.10",
     "firebase": "^8.7.1",
+    "formik": "^2.4.5",
     "glob": "^10.3.10",
     "graphql": "^15.5.1",
     "graphql-request": "^3.4.0",
@@ -137,7 +138,8 @@
     "workbox-range-requests": "^6.1.5",
     "workbox-routing": "^6.1.5",
     "workbox-strategies": "^6.1.5",
-    "workbox-streams": "^6.1.5"
+    "workbox-streams": "^6.1.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.2",
