--- a/package.json
+++ b/package.json
@@ -44,7 +44,13 @@
     ]
   },
   "dependencies": {
-    "@cosmjs/cosmwasm-stargate": "^0.29.5",
+    "@cosmjs/cosmwasm-stargate": "^0.32.0",
+    "@cosmos-kit/core": "^2.7.7",
+    "@cosmos-kit/cosmos-extension-metamask": "^0.2.8",
+    "@cosmos-kit/keplr": "^2.4.12",
+    "@cosmos-kit/leap": "^2.4.13",
+    "@cosmos-kit/react": "^2.9.11",
+    "@cosmos-kit/xdefi": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@matejmazur/react-katex": "^3.1.3",
@@ -64,9 +70,11 @@
     "@types/react-syntax-highlighter": "^15.5.5",
     "async-mutex": "^0.4.0",
     "big.js": "^6.1.1",
+    "chain-registry": "^1.20.0",
     "chart.js": "^3.9.1",
     "classnames": "^2.3.1",
     "color": "^3.1.3",
+    "cosmjs-types": "^0.9.0",
     "d3-array": "^3.1.1",
     "d3-ease": "^2.0.0",
     "d3-interpolate": "^2.0.1",
