--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "types": ["vite-plugin-svgr/client"]
   },
   "include": [
     "src",
