--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@cosmjs/cosmwasm-stargate": "^0.32.0",
     "@cosmos-kit/core": "^2.7.7",
     "@cosmos-kit/cosmos-extension-metamask": "^0.2.8",
+    "@cosmos-kit/cosmostation": "^2.4.11",
     "@cosmos-kit/keplr": "^2.4.12",
     "@cosmos-kit/leap": "^2.4.13",
     "@cosmos-kit/react": "^2.9.11",
